--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,162 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
+:root {
+  --textColor: #f2f2f2;
+  --BgColor: #0f3556;
+  --secondColor: #0c151a;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
 .App {
+  width: 100%;
+  min-height: 100vh;
+  background-color: var(--BgColor);
+}
+.search-header {
+  width: 100%;
+  height: 40px;
+  background-color: #fffefe;
+  display: flex;
+  align-items: center;
+}
+input {
+  width: calc(100% - 50px);
+  height: 100%;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  margin-left: 10px;
+}
+input::placeholder {
+  color: #8a8a8a;
+  font-size: 15px;
+}
+.btn-back {
+  font-size: 30px;
+  text-decoration: none;
+  margin-left: 10px;
+}
+.reads-header {
+  width: 100%;
+  height: 40px;
+  background-color: #fffefe;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.reads-header h1 {
+  font-size: 20px;
+  line-height: 2;
+  color: var(--secondColor);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.container {
+  width: 100%;
   min-height: 100vh;
+  position: relative;
+  padding: 25px 10px 0;
+  background-color: var(--BgColor);
+}
+.add-book {
+  position: fixed;
+  bottom: 10px;
+  right: 20px;
+  color: var(--textColor);
+  text-decoration: none;
+  font-size: 25px;
+  opacity: 0.6;
+  transition: all 0.2s linear;
+  line-height: 1;
+  border-radius: 50%;
+}
+.add-book:hover {
+  background-color: #0c151a6c;
+  width: fit-content;
+  height: fit-content;
+  padding: 5px;
+  border-radius: 50%;
+  opacity: 1;
+}
+.mybooks-heading {
+  font-size: 15px;
+  font-weight: 400;
+  color: var(--textColor);
+  border: 1px solid #8a8a8a;
+  border-left-color: transparent;
+  border-right-color: transparent;
+  padding: 5px;
+}
+.books-container {
+  text-align: center;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  align-items: flex-start;
+}
+.book {
+  width: 140px;
+  height:auto;
+  margin: 15px;
+  position: relative;
+}
+.book img {
+  width: 100%;
+  height: 160px;
+}
+.book-title {
+  font-size: 13px;
+  color: var(--textColor);
+}
+.book-author {
+  font-size: 10px;
+  color: #afafaf;
+  white-space: pre-line;
+}
+.shelf-changer {
+  position: absolute;
+  top: 100px;
+  right: -15px;
+}
+.shelf-changer select {
+  display: none;
+  outline: none;
+  border: none;
+  padding: 5px;
+  position: relative;
+  z-index: 0;
+}
+.shelf-changer option:hover {
+  cursor: pointer;
+}
+.shelf-changer select:hover > :not(option:hover) {
+  opacity: .5;
+}
+.open-selectbox {
+  position: absolute;
+  top: 120px;
+  right: -15px;
+  color: var(--textColor);
+  background-color: var(--secondColor);
+  text-decoration: none;
+  font-size: 12px;
+  transition: all 0.2s linear;
+  line-height: 1;
+  border-radius: 50%;
+  border: none;
+  outline: none;
+  padding: 10px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.show-selectbox {
+  display: block !important;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.not-found {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  place-content: center;
+  color: var(--textColor);
 }
